k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: info-management-system
  labels:
    name: info-management-system
    app: info-management-system
